<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="settings">Настройки</string>
    <string name="playlist_maker">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="dark_article">Темная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="user">Пользовательское соглашение</string>
    <string name="input_hint">Поиск</string>
    <string name="android_developer_url">https://practicum.yandex.ru/profile/android-developer/</string>
    <string name="txt">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="sub"> Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="email">averkieva10012017@ya.ru</string>
    <string name="practicum_offer">https://yandex.ru/legal/practicum_offer/</string>
    <string name="track_title">Название трека</string>
    <string name="track_artist">Исполнитель</string>
    <string name="track_time">00:00</string>
    <string name="nothing_found_text">Ничего не нашлось</string>
    <string name="problems_with_loading">Проблемы со связью \n \n Загрузка не удалась. Проверьте \n подключение к интернету</string>
    <string name="refreshText">Обновить</string>
    <string name="searchedText">Вы искали</string>
    <string name="clearHistory">Очистить историю</string>
    <string name="trackTime">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="albumName">Название альбома</string>
    <string name="yearNumber">1703</string>
    <string name="genreName">Какой-то жанр</string>
    <string name="countryName">Лучшая страна</string>
    <string name="unknownTrack">Unknown Track</string>
    <string name="unknownArtist">Unknown Artist</string>
    <string name="unknownAlbum">Unknown Album</string>
    <string name="unknownYear">Year</string>
    <string name="unknownGenre">Unknown Genre</string>
    <string name="unknownCountry">Unknown Country</string>
    <string name="mediateka">Медиатека</string>
    <string name="mediateka_empty">Ваша медиатека пуста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="playlist_empty">Вы не создали \n ни одного плейлиста</string>
    <string name="favourite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="title_playlist">Название*</string>
    <string name="create">Создать</string>
    <string name="name_playlist">Название плейлиста</string>
    <string name="number_of_tracks">Количество треков</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="track_already_added">Трек уже добавлен в плейлист</string>
    <string name="track_added">Добавлено в плейлист</string>
    <string name="end_creation">Завершить создание плейлиста?</string>
    <string name="lost_data">Все несохраненные данные будут потеряны</string>
    <string name="cancel">Отмена</string>
    <string name="end">Завершить</string>
    <string name="ok">Ок</string>
    <string name="description">Описание</string>
    <string name="duration">Длительность</string>
    <string name="playlist_created">Плейлист %s создан</string>
    <string name="share_menu">Поделиться</string>
    <string name="edit_information">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="question_delete_playlist">Хотите удалить плейлист?</string>
    <string name="question_delete_track">Хотите удалить трек?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="edit">Редактировать</string>
    <string name="save">Сохранить</string>
    <string name="nothing_for_sharing">В данном плейлисте нет списка треков, которым можно поделиться.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>