<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSecondaryVariant"
    android:orientation="vertical"
    android:paddingLeft="@dimen/radius_and_margin_top"
    android:paddingRight="@dimen/paddingRight"
    tools:context="com.example.playlistmaker.ui.settings.fragment.SettingsFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/ys_display_medium"
            android:paddingTop="14dp"
            android:text="@string/settings"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="@dimen/primary_text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/for_text"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:orientation="horizontal">

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/themeSwitcher"
            style="@style/switch_style"
            android:paddingVertical="@dimen/marginVertical"
            android:paddingEnd="2dp"
            android:text="@string/dark_article" />
    </LinearLayout>

    <LinearLayout style="@style/activity_settings_linear_layout_style">

        <TextView
            android:id="@+id/share"
            style="@style/activity_settings_text_style"
            android:text="@string/share" />

        <ImageView
            style="@style/activity_settings_icons_style"
            android:src="@drawable/share" />
    </LinearLayout>

    <LinearLayout style="@style/activity_settings_linear_layout_style">

        <TextView
            android:id="@+id/support"
            style="@style/activity_settings_text_style"
            android:text="@string/support" />

        <ImageView
            style="@style/activity_settings_icons_style"
            android:src="@drawable/support" />
    </LinearLayout>

    <LinearLayout style="@style/activity_settings_linear_layout_style">

        <TextView
            android:id="@+id/userPolicy"
            style="@style/activity_settings_text_style"
            android:text="@string/user" />

        <ImageView
            style="@style/activity_settings_icons_style"
            android:src="@drawable/user" />
    </LinearLayout>
</LinearLayout>
