<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    android:paddingTop="14dp"
    android:paddingBottom="28dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/playlist_maker"
        android:textColor="@color/white_1"
        android:textSize="@dimen/primary_text_size" />

    <Button
        android:id="@+id/search"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="40dp"
        android:layout_weight="1"
        android:backgroundTint="@color/white_1"
        android:text="@string/search"
        android:textAllCaps="false"
        android:textColor="@color/black_1"
        android:textSize="@dimen/primary_text_size"
        app:cornerRadius="@dimen/radius_and_margin_top"
        app:icon="@drawable/search"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/icon_padding"
        app:iconTint="@color/black_1" />

    <Button
        android:id="@+id/media"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/radius_and_margin_top"
        android:layout_weight="1"
        android:backgroundTint="@color/white_1"
        android:text="@string/media"
        android:textAllCaps="false"
        android:textColor="@color/black_1"
        android:textSize="@dimen/primary_text_size"
        app:cornerRadius="@dimen/radius_and_margin_top"
        app:icon="@drawable/media"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/icon_padding"
        app:iconTint="@color/black_1" />

    <Button
        android:id="@+id/settings"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/radius_and_margin_top"
        android:layout_marginBottom="12dp"
        android:layout_weight="1"
        android:backgroundTint="@color/white_1"
        android:text="@string/settings"
        android:textAllCaps="false"
        android:textColor="@color/black_1"
        android:textSize="@dimen/primary_text_size"
        app:cornerRadius="@dimen/radius_and_margin_top"
        app:icon="@drawable/settings"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/icon_padding"
        app:iconTint="@color/black_1" />
</LinearLayout>