<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/left_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="24dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/right_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="24dp" />

        <ImageButton
            android:id="@+id/audioPlayerBackButton"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/back"
            app:tint="?attr/colorOnPrimary" />

        <ImageView
            android:id="@+id/audioPlayerCover"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="82dp"
            app:layout_constraintDimensionRatio="h,1:1"
            app:layout_constraintEnd_toStartOf="@+id/right_guideline"
            app:layout_constraintStart_toStartOf="@+id/left_guideline"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/audio_player_cover" />

        <TextView
            android:id="@+id/audioPlayerTrackName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:ellipsize="end"
            android:fontFamily="@font/ys_display_medium"
            android:maxLines="1"
            android:text="@string/track_title"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="22sp"
            app:layout_constraintEnd_toStartOf="@+id/right_guideline"
            app:layout_constraintStart_toStartOf="@+id/left_guideline"
            app:layout_constraintTop_toBottomOf="@+id/audioPlayerCover" />

        <TextView
            android:id="@+id/audioPlayerArtistName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:ellipsize="end"
            android:fontFamily="@font/ys_display_medium"
            android:maxLines="1"
            android:text="@string/track_artist"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/right_guideline"
            app:layout_constraintStart_toStartOf="@+id/left_guideline"
            app:layout_constraintTop_toBottomOf="@+id/audioPlayerTrackName" />

        <ImageButton
            android:id="@+id/audioPlayerAddButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="54dp"
            android:background = "@drawable/round1"
            android:backgroundTint="#401A1B22"
            app:layout_constraintStart_toStartOf="@+id/left_guideline"
            app:layout_constraintTop_toBottomOf="@+id/audioPlayerArtistName"
            app:srcCompat="@drawable/audio_player_add_button"
            app:tint="#fff" />

        <ImageButton
            android:id="@+id/audioPlayerPlayButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:background = "@drawable/round2"
            app:layout_constraintStart_toStartOf="@+id/left_guideline"
            app:layout_constraintTop_toBottomOf="@+id/audioPlayerArtistName"
            app:srcCompat="@drawable/audio_player_play"
            app:layout_constraintEnd_toStartOf="@+id/right_guideline"
            app:tint="?attr/colorOnPrimary" />

        <ImageButton
            android:id="@+id/audioPlayerFavouriteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="54dp"
            android:background = "@drawable/round1"
            android:backgroundTint="#401A1B22"
            app:layout_constraintEnd_toStartOf="@+id/right_guideline"
            app:layout_constraintTop_toBottomOf="@+id/audioPlayerArtistName"
            app:srcCompat="@drawable/audio_player_fav_button"
            app:tint="#fff" />

        <TextView
            android:id="@+id/audioPlayerTrackTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:ellipsize="end"
            android:fontFamily="@font/ys_display_medium"
            android:maxLines="1"
            android:text="@string/track_time"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/right_guideline"
            app:layout_constraintStart_toStartOf="@+id/left_guideline"
            app:layout_constraintTop_toBottomOf="@+id/audioPlayerPlayButton" />

        <TextView
            android:id="@+id/audioPlayerTrackTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginStart="16dp"
            android:ellipsize="end"
            android:fontFamily="@font/ys_display_medium"
            android:maxLines="1"
            android:text="@string/trackTime"
            android:textColor="@color/colorSecondaryLight"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/audioPlayerTrackTimer" />

        <TextView
            android:id="@+id/audioPlayerAlbum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:layout_marginStart="16dp"
            android:ellipsize="end"
            android:fontFamily="@font/ys_display_medium"
            android:maxLines="1"
            android:text="@string/album"
            android:textColor="@color/colorSecondaryLight"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/audioPlayerTrackTime" />

        <TextView
            android:id="@+id/audioPlayerYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:layout_marginStart="16dp"
            android:ellipsize="end"
            android:fontFamily="@font/ys_display_medium"
            android:maxLines="1"
            android:text="@string/year"
            android:textColor="@color/colorSecondaryLight"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/audioPlayerAlbum" />

        <TextView
            android:id="@+id/audioPlayerGenre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:layout_marginStart="16dp"
            android:ellipsize="end"
            android:fontFamily="@font/ys_display_medium"
            android:maxLines="1"
            android:text="@string/genre"
            android:textColor="@color/colorSecondaryLight"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/audioPlayerYear" />

        <TextView
            android:id="@+id/audioPlayerCountry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:layout_marginStart="16dp"
            android:ellipsize="end"
            android:fontFamily="@font/ys_display_medium"
            android:maxLines="1"
            android:text="@string/country"
            android:textColor="@color/colorSecondaryLight"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/audioPlayerGenre" />

        <TextView
            android:id="@+id/audioPlayerTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="16dp"
            android:ellipsize="end"
            android:fontFamily="@font/ys_display_medium"
            android:maxLines="1"
            android:gravity="end"
            android:text="@string/track_time"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/audioPlayerTrackTimer" />

        <TextView
            android:id="@+id/audioPlayerAlbumName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:layout_marginEnd="16dp"
            android:ellipsize="end"
            android:fontFamily="@font/ys_display_medium"
            android:maxLines="1"
            android:gravity="end"
            android:text="@string/albumName"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/audioPlayerTime" />

        <TextView
            android:id="@+id/audioPlayerYearNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:layout_marginEnd="16dp"
            android:ellipsize="end"
            android:fontFamily="@font/ys_display_medium"
            android:maxLines="1"
            android:gravity="end"
            android:text="@string/yearNumber"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/audioPlayerAlbumName" />

        <TextView
            android:id="@+id/audioPlayerGenreName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:layout_marginEnd="16dp"
            android:ellipsize="end"
            android:fontFamily="@font/ys_display_medium"
            android:maxLines="1"
            android:gravity="end"
            android:text="@string/genreName"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/audioPlayerYearNumber" />

        <TextView
            android:id="@+id/audioPlayerCountryName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:layout_marginEnd="16dp"
            android:ellipsize="end"
            android:fontFamily="@font/ys_display_medium"
            android:maxLines="1"
            android:gravity="end"
            android:text="@string/countryName"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/audioPlayerGenreName" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/audioPlayerCountryName" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>