<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/result_of_search_main_layout_style"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/track_pic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/search_placeholder" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/icon_padding"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/track_article"
            style="@style/result_of_search_title_style"
            android:paddingTop="14dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/track_title" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingEnd="14dp">

            <TextView
                android:id="@+id/track_artist"
                style="@style/result_of_search_artist_time_style"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/track_artist"
                tools:ignore="TextContrastCheck" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0"
                android:src="@drawable/dot"
                app:tint="?attr/colorSecondary" />

            <TextView
                android:id="@+id/track_time"
                style="@style/result_of_search_artist_time_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/track_time"
                tools:ignore="TextContrastCheck" />


        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="@dimen/icon_padding"
        android:src="@drawable/user"
        app:tint="?attr/colorSecondary" />


</LinearLayout>